--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,192 @@
 html {
-  background: #0025ff;
-  color: #fff;
+  background-color: #f6f3f3;
+  color: black;
+  font-family: 'Nanum Gothic', sans-serif;
+}
+
+.full-container {
+  width: 100%;
+}
+
+.logo {
+  width: 70%;
+}
+
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 20px 0 20px 30px;
+}
+
+.nav-el {
+  display: inline;
+  padding: 10px;
+  text-decoration: none;
+  color: black;
+  font-size: 20px;
+  color:#5ca46e;
+  display: none;
+  margin-right: 5px;
+}
+.icons {
+  display: inline;
+  width: 5%;
+  float: right;
+  border-radius: 15px;
+  margin-bottom: 10px;
+  padding: 10px;
+}
+
+.search-button {
+  width: 19px;
+  padding-right: 15px;
+  background-color: #f9f7f3;
+}
+.header-button {
+  border-radius: 4px;
+  border: 1px solid #5ca46e;
+  padding: 5px;
+  background-color: #5ca46e;
+  color: white;
+}
+.mobile-view {
+  display: inline;
+}
+a:hover {
+  cursor: pointer;
+  color: hotpink;
+}
+
+.big-news {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-bottom: 50px;
+  margin-top: 30px;
+}
+.salad {
+  width: 100%;
+}
+
+.big-news-text {
+  font-size: 15px; 
+  background-color:#e9d9d3;
+  padding: 10px;
+  text-align: center;
+}
+h1 {
+  font-size: 45px;
+  font-weight: 300;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
+}
+p {
+  font-size: 20px;
+}
+.read-more {
+  display: block;
+  padding: 12px 28px;
+  font-family: Arial, Helvetica, sans-serif;
+  text-transform: uppercase;
+  margin: auto;
+  border-radius: 5px;
+  border:none;
+  background-color: #f9f7f3;
+  cursor: pointer;
+}
+
+.read-more:hover {
+  background-color: beige;
+}
+.news-section {
+    display: flex;
+    flex-direction: column;
+}
+
+.news-card {
+  width: 18%;
+  margin: 10px 20px;
+  background-color:#f4ebe6;
+  box-shadow: 0px 5px 5px 0px #baa281;
+}
+.news-card:hover {
+  opacity: 0.8;
+  transform: scale(1.2, 1.2);
+}
+
+.news-card img {
+  width: 100%;
+}
+
+.text-pics {
+  text-align: center;
+  font-size: 18px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 100;
+}
+.rubrique {
+  position: absolute;
+  text-align: center;
+  border: 0px solid #f4ebe6 ;
+  display: inline;
+  background-color:#f4ebe6;
+  border-radius: 5px;
+  margin:-1px;
+  font-size: 15px;
+  cursor: pointer;
+}
+.rubrique:hover {
+  background-color: #e2b7a4;
+}
+.text-pics {
+  font-weight: 100;
+  cursor: pointer;
+}
+.text-pics:hover {
+  color:#5ca46e;
+}
+footer {
+  background-color:#f6f3f3;
+  display: flex;
+  justify-content: center;
+  margin-top: 40px;
+  font-family:'Nanum Gothic', sans-serif;
+  color: #a7a5a5;
+}
+.footer {
+ font-size: 16px;
+}
+
+@media (min-width: 1100px) {
+  .nav-el {
+    display: inline;
+  }
+  .salad {
+    width: 50%;
+  }
+  .big-news {
+    flex-direction: row;
+    margin-left: 150px;
+    margin-right: 150px;
+  }
+  .header-button {
+    display: none;
+  }
+  .icons {
+    display:none;
+  }
+
+  .news-section {
+    flex-flow: wrap row;
+    justify-content: center;
+    margin: 20px 100px 0px;
+  }
+}
+
+@media (min-width: 768px) {
+  .new-section {
+    flex-flow: row wrap;
+    justify-content: space-between;
+  }
 }
