--- a/style.css
+++ b/style.css
@@ -492,9 +492,9 @@ font-size: 70%;
 
 
 }
-@media only screen and (min-device-width: 481px) and (max-device-width: 1024px) and (orientation:portrait) {
+@media only screen and (device-width: 768px) {
   
-  .nav-container{
+  .container-navr{
     margin:-5% 0 0 0%;
 }
  }
