--- a/style.css
+++ b/style.css
@@ -494,7 +494,7 @@ font-size: 70%;
 }
 @media only screen and (device-width: 768px) {
   
-  .container-navr{
+  .container-nav{
     margin:-5% 0 0 0%;
 }
  }
