--- a/style.css
+++ b/style.css
@@ -497,6 +497,61 @@ font-size: 70%;
   .container-nav{
     margin:-5% 0 0 0%;
 }
+.nawbar {
+  position: fixed;
+  background-color: rgb(0, 0, 0);
+  grid-row: span 1;
+  grid-column: span 12;
+  height: 4.8vh;
+  padding-left: 0%;
+  margin-left: -0.5%;
+  display: flex;
+  width: 100%;
+  z-index: 12;
+}
+
+.navbar-items {
+  background-color: rgb(0, 0, 0);
+  width: 100%;
+  height: 4vh;
+  display: flex;
+  margin: 0% 0% 0 -8%;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.nawbar-btn {
+  
+  margin: 0 7.0% 0 3.0%;
+}
+
+
+
+.navbar-items #nav-img {
+  order: 2;
+  padding: 0 4% 0 0;
+  height: 3.5vh;
+  opacity: 80%;
+  visibility: visible;
+}
+.navbar-items #nav-button-1 {
+  order: 1;
+}
+.navbar-items #nav-button-2 {
+  order: 1;
+}
+
+.navbar-items #nav-button-3 {
+  order: 4;
+}
+
+.navbar-items #nav-button-4 {
+  order: 4;
+}
+
+#nav-text {
+  visibility: hidden;
+}
  }
 
 
