added <article> and <footer>

--- a/code/style.css
+++ b/code/style.css
@@ -83,9 +83,15 @@ i {
   justify-content: space-evenly;
 }
 
-.about-paragraph {
+.contact-paragraph, .footer-text {
   text-align: center;
   font-size: 17px;
   margin-top: 10px;
 }
+
+.fab {
+  color: black;
+}
+
+
 
