--- a/style.css
+++ b/style.css
@@ -497,6 +497,11 @@ font-size: 70%;
   .container-nav{
     margin:-5% 0 0 0%;
 }
+.container-header{
+
+margin: 0% 0% 0% 1%;
+
+}
 .nawbar {
   position: fixed;
   background-color: rgb(0, 0, 0);
