--- a/style.css
+++ b/style.css
@@ -565,7 +565,7 @@ margin: 0% 1% 0% 0%;
 
 
 
-@media (min-width: 641px) and (max-width: 1023px) {
+@media (min-width: 770px) and (max-width: 1023px) {
  
   body {
     
@@ -705,7 +705,7 @@ padding-bottom: -0.2%;
   .container-nav {
     justify-content:center;
     align-content:center;
-    
+    margin-top: -1%;
   }
   
 
