--- a/style.css
+++ b/style.css
@@ -499,68 +499,132 @@ font-size: 70%;
     margin:-1% 0 0 0%;
 }
 
-.container-header{
 
-margin: 0% 1% 0% 0%;
-
-}
 .nawbar {
   position: fixed;
   background-color: rgb(0, 0, 0);
   grid-row: span 1;
   grid-column: span 12;
-  height: 4.8vh;
-  padding-left: 0%;
-  margin-left: -0.5%;
-  display: flex;
-  width: 100%;
+  height: 5vh;
   z-index: 12;
 }
 
 .navbar-items {
   background-color: rgb(0, 0, 0);
-  width: 100%;
-  height: 4vh;
-  display: flex;
-  margin: 0% 0% 0 -8%;
-  justify-content: space-around;
+  height: 5vh;
+  display: flexbox;
+  justify-content: space-between;
   align-items: center;
+  margin-left: -17%;
+  
+ 
 }
 
 .nawbar-btn {
-  
-  margin: 0 7.0% 0 3.0%;
+  font-size: 75%;
+  margin: 1% 5% 0 5%;
 }
 
-
+.navbar-items {
+  
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
 
 .navbar-items #nav-img {
-  order: 2;
-  padding: 0 4% 0 0;
-  height: 3.5vh;
+  order: 1;
+  height: 4.1vh;
+  margin-right: 1%;
+  margin-left: -1%;
   opacity: 80%;
-  visibility: visible;
+  
 }
 .navbar-items #nav-button-1 {
-  order: 1;
+  order: 2;
 }
 .navbar-items #nav-button-2 {
-  order: 1;
+  order: 2;
 }
 
 .navbar-items #nav-button-3 {
-  order: 4;
+  order: 3;
 }
 
 .navbar-items #nav-button-4 {
-  order: 4;
+  order: 3;
 }
 
 #nav-text {
   visibility: hidden;
 }
 
+.nav-btn {
+  width: 5vw;
+  height: 5vh;
 }
+
+header {
+  grid-row: span 1;
+  grid-column: span 12;
+  width: 101%;
+  height: 100vw;
+}
+
+
+
+#video-header {
+  height: 100%;
+  width: 100%;
+}
+
+.big-news {
+  grid-row: span 1;
+  grid-column: span 12;
+  width: 100vw;
+  height: 100%;
+  padding: 0% 2% 0% 2%;
+  margin-top: -8%;
+}
+
+#bignewz-first-h1{
+font-size: 2.5rem;
+margin: 8% 0% 1% 0%;
+
+
+}
+
+
+.big-news h1 {
+  margin: 1% 0% 1% 0%;
+  font-size: 100%;
+}
+
+.big-news p {
+  margin: 0% 1% 1% 0%;
+
+  font-size: 75%;
+}
+
+.stream-big-btn {
+  width: 50vw;
+  margin: 3% 1% 0% 0%;
+  font-size: 0.8rem;
+}
+.regular-news-cards {
+  grid-row: span 1;
+  grid-column: span 12;
+}
+
+
+#footer-text{
+
+font-size: 0.1%;
+padding-top: 2%;
+
+}
+}
+
 
 
 
