--- a/style.css
+++ b/style.css
@@ -355,7 +355,7 @@ height: 65%;
 
 
 
-@media (min-width: 1024px) and (max-width: 1499px) {
+@media (min-width: 1025px) and (max-width: 1499px) {
 
 .container-header{
 
@@ -507,7 +507,14 @@ font-size: 70%;
 
 .container-regular-footer{
 
-grid-gap: 1%;
+
+ 
+    height: 985px;
+    
+    margin:54% 0 0 0%;
+    
+  
+  }
 
 }
   .nawbar {
