--- a/style.css
+++ b/style.css
@@ -505,16 +505,7 @@ font-size: 70%;
     
   }
 
-.container-regular-footer{
 
-
- 
-    height: 985px;
-    
-    margin:54% 0 0 0%;
-    
-  
-  }
 
 }
   .nawbar {
@@ -575,7 +566,7 @@ font-size: 70%;
 
   .container-head {
    height: 100%;
-    padding: 10% 0% 0% 0%;
+    padding: 10% 0% 5% 0%;
  
  
  }
@@ -608,26 +599,28 @@ font-size: 70%;
   }
 
   #bignewz-first-h1{
-    font-size: 190%; 
+    font-size: 250%; 
    
   }
 
   .big-news h1 {
    
-    margin-top: 5%;
-    font-size: 140%;
+    margin-top: 7%;
+    font-size: 150%;
   }
 
   .big-news p {
     
-    font-size: 100%;
+    font-size: 120%;
+    margin-top: 1%;
+    margin-bottom: 17%;
   }
 
   .stream-big-btn {
     
     width: 46%;
-    margin: 15% 0 -0% 0%;
-    font-size: 99%;
+    margin-bottom: -5%;
+    font-size: 100%;
   }
   .regular-news-cards {
     grid-row: span 1;
