--- a/style.css
+++ b/style.css
@@ -504,10 +504,13 @@ font-size: 70%;
    
     
   }
+.container-nav{
 
-
-
+  margin-top: 5%;
 }
+
+
+
   .nawbar {
     position: fixed;
     background-color: rgb(0, 0, 0);
@@ -643,7 +646,7 @@ padding-bottom: -0.2%;
 
 }
   
-  }
+}
 
 
 
