--- a/style.css
+++ b/style.css
@@ -506,7 +506,7 @@ font-size: 70%;
   }
 .container-nav{
 
-  margin-top: 5%;
+  margin-top: 6%;
 }
 
 
@@ -516,7 +516,7 @@ font-size: 70%;
     background-color: rgb(0, 0, 0);
     grid-row: span 1;
     grid-column: span 12;
-    height: 4.8vh;
+    height: 5vh;
     padding-left: 0%;
     margin-left: -0.5%;
     display: flex;
@@ -633,6 +633,9 @@ font-size: 70%;
   .regular-news-cards img{
     height: 250px;
     
+     }
+     .regular-news-cards h3{
+       font-size: 120%;
      }
 
 .footer-div{
