--- a/style.css
+++ b/style.css
@@ -506,7 +506,7 @@ font-size: 70%;
   }
 .container-nav{
 
-  margin-top: 6%;
+  margin-top: 5%;
 }
 
 
@@ -536,7 +536,7 @@ font-size: 70%;
 
   .nawbar-btn {
     
-    margin: 0 7.0% 0 3.0%;
+    margin: 1% 7.0% 0 3.0%;
   }
 
 
