--- a/style.css
+++ b/style.css
@@ -628,6 +628,7 @@ font-size: 70%;
   .regular-news-cards {
     grid-row: span 1;
     grid-column: span 6;
+    margin-top: 1%;
   }
 
   .regular-news-cards img{
