--- a/style.css
+++ b/style.css
@@ -882,7 +882,8 @@ height: 200px;
     }
     #footer-text{
 
-      font-size: 10%;
+      font-size: 5%;
+      white-space: nowrap;
     }
     
   }
