--- a/style.css
+++ b/style.css
@@ -880,6 +880,10 @@ padding-bottom: -0.2%;
 height: 200px;
 
     }
+    .footer-div{
+width: 107%;
+
+    }
     #footer-text{
 
       font-size: 5px;
