--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,139 @@
-html {
-  background: #0025ff;
-  color: #fff;
+.header {
+  display: flex;
+  justify-content: space-between;
+
+}
+
+.logo {
+  width: 100px;
+}
+
+.big-container {
+display: flex;
+flex-direction: column;
+
+}
+
+.big-news {
+  height: 610px;
+  margin: 10px 0;
+  display: grid; 
+  grid-gap: 2px;
+  grid-template-columns: 1fr;
+  border: 5px solid black;
+  
+}
+
+.sushi {
+  width: 100%;
+  height: auto;
+  margin: 0;
+}
+
+h2 {
+  
+  font-family: Arial, Helvetica, sans-serif;
+  padding: 0%;
+  margin: 2px;
+}
+
+h3 {
+  
+  font-family: Arial, Helvetica, sans-serif;
+  padding: 0%;
+  margin: 2px;
+}
+
+.text {
+  background-color: white;
+  width: auto;
+  height: auto;
+  padding: 5px;
+  margin: 0;
+}
+
+
+
+
+.other-news {
+
+margin: 10px 2px;
+display: grid; 
+grid-gap: 2px;
+grid-template-columns: 2fr;
+border: 3px solid grey;
+color: black;
+}
+
+
+
+/* .other-news {
+  display: grid;
+  grid-gap: 5px;
+  grid-template-columns: 1fr;
+  margin: 5px;
+} */
+
+
+.image-other {
+  width: auto;
+  height: 100%;
+  margin: 0;
+
+}
+
+.box {
+  margin: 0;
+  width: 100%;
+  height: 200px;
+  padding: 5px;
+ 
+}
+
+.first {
+  background-color: aqua;
+}
+
+/* .biscuit-basket {
+  object-fit: cover;
+  height: 100%;
+  width: 50%;
+} */
+
+.second {
+  background-color: blueviolet;
+}
+
+.third {
+  background-color: cadetblue;
+}
+
+.forth {
+  background-color: chartreuse;
+}
+
+.fifth {
+  background-color: cornflowerblue;
+}
+
+.sixth {
+  background-color: crimson;
+}
+
+.seventh {
+  background-color: darkgoldenrod;
+}
+
+.eighth {
+  background-color: darkmagenta;
+}
+
+
+
+
+@media (min-width: 768px) {
+  .logo {
+    width: 200px;
+  }
+  
 }
