--- a/style.css
+++ b/style.css
@@ -874,7 +874,11 @@ padding-bottom: -0.2%;
       font-size: 70%;
       margin: 0% 1% 0 1%;
     }
+.regular-news-cards{
 
+  margin-top: 2%;
+
+}
     .regular-news-cards img{
 
 height: 200px;
