changed the font and the loggo

--- a/code/style.css
+++ b/code/style.css
@@ -24,8 +24,9 @@ nav {
 
 }
 .site-name {
-  font-family: 'Pacifico', cursive;
-  font-size: 35px;
+  font-family: 'Six Caps', sans-serif;/*'Pacifico', cursive;*/
+  letter-spacing: 2px;
+  font-size: 50px;
  /* margin-top: 1rem;*/
 }
 .big-news {
@@ -34,10 +35,6 @@ nav {
   margin: 5px;
   padding: 20px;
   background-color: white;
-}
-.big-news-image {
-  
-  box-shadow:
 }
 .big-news-text {
   border: solid 2px;
