--- a/code/style.css
+++ b/code/style.css
@@ -1,6 +1,7 @@
 html {
-  background: #aaaaaa;
+  background: #bebebe;
   color: rgb(0, 0, 0);
+  font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
 a {
@@ -8,8 +9,8 @@ a {
 }
 
 header{
-  background-color: rgb(240, 240, 240);
-  margin: 20px 0px;
+  background-color: rgb(250, 250, 250);
+  margin: 20px 20px;
   padding: 20px;
 }
 
@@ -23,10 +24,6 @@ header{
 .site-name{
   font-size: 4vw;
   margin: 0 0 0 10vw; 
-}
-
-h1{
-  font-family: 'Times New Roman', Times, serif;
 }
 
 nav{
@@ -52,6 +49,7 @@ nav{
   text-decoration: none;
 }
 
+/* Underline animation navigation links */
 .navigation ul li::after{
   content:'';
   width: 0%;
@@ -69,9 +67,11 @@ nav{
 .big-news {
   display:flex;
   flex-direction: column;
-  background-color: rgb(240, 240, 240);
-  margin: 10px 0px;
+  background-color: rgb(250, 250, 250);
+  margin: 10px 20px;
   padding: 20px;
+
+  
 }
 
 .big-news-text-block{
@@ -85,13 +85,18 @@ nav{
 }
 
 .small-news-card{
-  background-color: rgb(240, 240, 240);
-  margin: 10px 0px;
+  background-color: rgb(250, 250, 250);
+  margin: 10px 20px;
   padding: 20px;
   display:flex;
   flex-direction: column;
   max-width: 200px;
   text-align: center;
+
+  /* Shadow for box */
+  -webkit-box-shadow: 0 4px 6px rgba(0, 0, 0, .3);
+  -moz-box-shadow: 0 4px 6px rgba(0,0,0,.3);
+  box-shadow: 0 4px 6px rgba(0,0,0,.3);
 }
 
 .small-news-card:hover {
