--- a/code/style.css
+++ b/code/style.css
@@ -1,4 +1,180 @@
 html {
-  background: #0025ff;
-  color: #fff;
+  background: #8c8d9240;
+  color: #404040;
+  font-family: 'Montserrat', sans-serif;
+}
+a:link {
+  color: black;
+}
+/* visited link */
+a:visited {
+  color: #404040;
+}
+
+/* mouse over link */
+a:hover {
+  color: #6e7e85;
+}
+
+/* selected link */
+a:active {
+  color: #d09a99;
+} 
+
+h1, h2{
+  font: 70px;
+  border-top: 0;
+}
+
+.top-header{
+  display: flex;
+  flex-direction: column;
+  justify-content:space-evenly;
+  align-items: center;
+  height: 360px;
+  width: 1360px;
+  border-radius: 1rem;
+  padding: 25px;
+  background: linear-gradient(
+      45deg,
+      #6e7e85,
+      #8aa2a9,
+      #b7cece,
+      #d5b9b2,
+      #ddd5d0,
+      #c3c3c3);
+
+  background-size: 500%;
+  animation-name: gradient;
+  animation-duration: 10s;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+}
+@keyframes gradient{
+  from {
+      background-position: 0%;
+  }
+  to {
+      background-position: 100%;
+  }
+  }
+
+.logo-pic {
+  height: 200px;
+  width: 200px;
+}
+
+.nav-bar{
+  width: 1400px;
+  height: 100px;
+  display: flex;
+  text-align: center;
+  justify-content: space-evenly;
+  font-size: 24px;
+  border-radius: 1rem;
+}
+
+.big-news{
+  height: 500px;
+  width: 1400px;
+  display: grid;
+  grid-template-columns:1fr 1fr;
+  grid-gap: 5px;
+  border-radius: 1rem;
+  border:  1px solid black;
+  align-items: center;
+  margin: 8px 5px 5px 5px;
+}
+
+.grid-1{
+  display: flex;
+  flex-flow: column;
+  padding: 5px;
+  grid-column: span 1;
+  margin: 10px;
+  padding: 25px;
+  align-items: right;
+  justify-content: space-evenly;
+}
+.imagewrapper {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+.big-pic {
+  height: 450px;
+  width: 450px;
+  border-radius: 1rem;
+  box-shadow: 5px 10px;
+}
+
+.small-news{
+  height: 600px;
+  width: 1400px;
+  display: grid;
+  grid-template-columns:1fr 1fr 1fr 1fr;
+  grid-gap: 5px;
+  padding: 5px;;
+}
+
+.grid-2, .grid-7 {
+  display: flex;
+  border:  1px solid black;
+  border-radius: 1rem;
+  padding: 5px;
+  grid-column: span 2;
+  margin: 10px;
+  padding: 25px;
+  align-items: center;
+  justify-content: center;
+}
+
+.medium-news{
+  flex-flow: column;
+  text-align: center;
+}
+
+.grid-3, .grid-4, .grid-5, .grid-6 {
+  display: flex;
+  flex-flow: column;
+  border:  1px solid black;
+  border-radius: 1rem;
+  padding: 2rem;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+}
+
+.small-pic{
+  height: 350px;
+  width: 350px;
+  border-radius: 1rem;
+  box-shadow: 5px 10px;
+}
+
+.little-pic{
+  height: 250px;
+  width: 250px;
+  border-radius: 1rem;
+  box-shadow: 5px 10px;
+}
+
+.footer-info{
+  height: 200px;
+  display: flex;
+  flex-direction: column;
+  align-items:center;
+  justify-content:space-around
+  padding: 5px;
+  font-size: 30px;
+  border:  1px solid black;
+  border-radius: 1rem;
+  grid-column: span 4;
+}
+
+.footer-pic{
+  height: 200px;
+  width: 200px;
+  border-top: 0;
+  padding-bottom: 10px;
 }
